# LinkingMem

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  plugins.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
bench/: load_test.py  memory_profile.py  run_all.py
core/: Cargo.toml
core/benches/: graph_traversal.rs  recall.rs  scoring.rs  vector_search.rs
core/src/: app_state.rs  cache.rs  config.rs  delta.rs  entity_resolution.rs  lib.rs  main.rs  metrics.rs  plugin.rs  query.rs
core/src/api/: error.rs  mod.rs
core/src/api/dto/: export.rs  ingest.rs  mod.rs  query.rs
core/src/api/handlers/: admin.rs  export.rs  ingest.rs  mod.rs  query.rs
core/src/graph/: builder.rs  csr.rs  mod.rs
core/src/middleware/: auth.rs
core/src/storage/: local.rs  mod.rs
core/src/vector/: hnsw.rs  mod.rs  store.rs
core/tests/: integration.rs  test_batch_ingest.rs  test_cache.rs  test_entity_resolution.rs  test_graph.rs  test_image_nodes.rs  test_ingest_integration.rs  test_new_features.rs  test_scoring.rs  test_vector.rs
docker/: entrypoint-full.sh  plugins-unix.toml
docs/: ALGORITHMS.md  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md  DEPLOYMENT.md  PLUGIN_INTERFACE.md  SYSTEM_DESIGN.md
docs/plan/: cluster-development.md  data-model-fields-and-foreign-keys.md  roadmap.md
plugins/image/: auth.py  embed.py  main.py  pyproject.toml  schemas.py  store.py
plugins/text/: Dockerfile  auth.py  embed.py  embed_image.py  extract.py  generate.py  llm.py  main.py  pyproject.toml  reason.py  schemas.py
plugins/text/tests/: conftest.py  test_embed.py  test_extract.py  test_generate.py  test_plugin.py  test_schemas.py
scripts/: quickstart.py  test_docker.sh  test_entity_resolution.py
