[package]
name = "ai-graph-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_graph_engine"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "ingest"
path = "src/bin/ingest.rs"

[dependencies]
axum            = { version = "0.7", features = ["json", "multipart"] }
validator       = { version = "0.18", features = ["derive"] }
axum-valid      = { version = "0.20", features = ["validator"] }
tokio           = { version = "1",   features = ["full"] }
tower-http      = { version = "0.5", features = ["cors", "trace"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
toml            = "0.8"
instant-distance = "0.6"
memmap2         = "0.9"
lru             = "0.12"
moka            = { version = "0.12", features = ["sync"] }
reqwest         = { version = "0.12", features = ["json"] }
# unix socket transport (hyper 1.x already pulled in by reqwest — add direct deps)
hyper           = { version = "1", features = ["http1", "client"] }
hyper-util      = { version = "0.1", features = ["tokio", "http1"] }
http-body-util  = "0.1"
bytes           = "1"
# distributed ingest — cross-platform WAL file locking
fs2             = "0.4"
bytemuck        = { version = "1",    features = ["derive"] }
rayon           = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow          = "1"
thiserror       = "1"
ordered-float   = "4"

[dev-dependencies]
tempfile  = "3"
tokio     = { version = "1", features = ["full"] }
axum      = { version = "0.7", features = ["json"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "graph_traversal"
harness = false

[[bench]]
name = "vector_search"
harness = false

[[bench]]
name = "scoring"
harness = false

[[bench]]
name = "recall"
harness = false
